src/test/deca/context/invalid/SansObjet/DeclVar-intBool.deca
// Description:
//    Declaration of a int variable with initialization.
// 
// Results:
//     Incompatible type asignement error
// 
// Historique: 
//    cree le 11/01/2022 

{
    int x = true ;
}
